--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -1,1 +1,44 @@
-<p>main-page works!</p>
+<header>
+  <nav>
+    <ul>
+      <li><a>Home</a></li>
+      <li><a>Projects</a></li>
+      <li><a>About</a></li>
+      <li><a>Contact</a></li>
+    </ul>
+  </nav>
+
+  <h1>Jason Truong</h1>
+</header>
+
+<main>
+  <h2>Welcome to my Portfolio</h2>
+  <a></a>
+
+  <section>
+    <section>
+      <h3>I like to code</h3>
+    </section>
+
+    <section>
+      <p>Description</p>
+    </section>
+  </section>
+</main>
+
+<footer>
+  <p>&copy; Jason Truong</p>
+
+  <nav>
+    <ul>
+      <li><a>LinkedIn</a></li>
+      <li><a>GitHub</a></li>
+    </ul>
+  </nav>
+</footer>
+
+<!--<div>-->
+<!--  <nav>-->
+<!--    <a></a>-->
+<!--  </nav>-->
+<!--</div>-->
