Create navbar - Move navbar into app from main page - Add router links for each page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,12 @@
+<div class="nav-bar">
+  <nav>
+    <a routerLink="/home" routerLinkActive="active">Home</a>
+    <a routerLink="/projects" routerLinkActive="active">Projects</a>
+    <a routerLink="/about" routerLinkActive="active">About</a>
+    <a routerLink="/contact" routerLinkActive="active">Contact</a>
+  </nav>
+</div>
+
 <div class="app-container">
   <router-outlet></router-outlet>
 </div>
