Basic styling - Added some content for main page - Added images

--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -4,7 +4,12 @@
 
 <main>
   <h2>Welcome to my Portfolio</h2>
-  <a></a>
+
+  <!-- projects button -->
+  <div class="button">
+    <a routerLink="/projects" routerLinkActive="active">Projects</a>
+  </div>
+
 
   <section>
     <section>
@@ -12,9 +17,18 @@
     </section>
 
     <section>
-      <p>Description</p>
+      <p><strong>Hey there</strong>, I'm an 18 year old
+      college student whose interest in technology and
+      early discovery of coding led to an ongoing 2-year
+      study in Computer Programming.</p>
+
+      <p>I am currently attending St. Clair College, and
+      by the end of my program, I plan to get into the
+      video game industry as a programmer.</p>
     </section>
   </section>
+
+  <img src="/images/portrait.jpg" alt="Jason Truong portrait"/>
 </main>
 
 <footer>
@@ -27,9 +41,3 @@
     </ul>
   </nav>
 </footer>
-
-<!--<div>-->
-<!--  <nav>-->
-<!--    <a></a>-->
-<!--  </nav>-->
-<!--</div>-->
