--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -1,14 +1,10 @@
-<header>
-  <h1>Jason Truong</h1>
-</header>
-
 <main>
-  <h2>Welcome to my Portfolio</h2>
+  <div>
+    <h1>Welcome to my Portfolio</h1>
+  </div>
 
   <!-- projects button -->
-  <div class="button">
-    <a routerLink="/projects" routerLinkActive="active">Projects</a>
-  </div>
+  <a class="button" routerLink="/projects" routerLinkActive="active">Projects</a>
 
 
   <section>
