Better even spacing - for main page only - navbar now uses space-evenly - may change in the future

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -14,3 +14,14 @@
 <div class="app-container">
   <router-outlet></router-outlet>
 </div>
+
+<footer>
+  <p>&copy; Jason Truong</p>
+
+  <nav>
+    <ul>
+      <li><a>LinkedIn</a></li>
+      <li><a>GitHub</a></li>
+    </ul>
+  </nav>
+</footer>
