--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -4,12 +4,15 @@
   </div>
 
   <!-- projects button -->
-  <a class="button" routerLink="/projects" routerLinkActive="active">Projects</a>
+  <div class="button">
+    <a class="button" routerLink="/projects" routerLinkActive="active">Projects</a>
+  </div>
+
 
 
   <section>
     <section>
-      <h3>I like to code</h3>
+      <h3>I like to code.</h3>
     </section>
 
     <section>
@@ -22,18 +25,10 @@
       by the end of my program, I plan to get into the
       video game industry as a programmer.</p>
     </section>
+
+    <img src="/images/portrait.jpg" alt="Jason Truong portrait"/>
   </section>
 
-  <img src="/images/portrait.jpg" alt="Jason Truong portrait"/>
+
 </main>
 
-<footer>
-  <p>&copy; Jason Truong</p>
-
-  <nav>
-    <ul>
-      <li><a>LinkedIn</a></li>
-      <li><a>GitHub</a></li>
-    </ul>
-  </nav>
-</footer>
