--- a/src/app/app.css
+++ b/src/app/app.css
@@ -11,7 +11,7 @@
 /* Header Styles */
 header {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   background-color: rgb(28, 26, 34);
   padding: 18px 44px;
@@ -25,10 +25,11 @@ header nav {
 nav > ul {
   /*margin-top: 15px;*/
   vertical-align: center;
+  margin: 0 40px;
 }
 
 header a {
-  margin: 0 40px;
+  margin: 0 20px;
   font-family: sans-serif;
   font-size: 1.4em;
   color: white;
@@ -37,4 +38,12 @@ header a {
 
 header .name {
   font-size: 2.4em;
+}
+
+
+/* Footer Styles */
+footer {
+  margin: 0 auto;
+  background-color: rgb(28, 26, 34);
+  max-width: 1280px;
 }
