--- a/src/app/main-page/main-page.css
+++ b/src/app/main-page/main-page.css
@@ -7,6 +7,12 @@ h1 {
 
 /* Button Style */
 .button {
+  margin-top: 32px;
+  position: relative;
+  left: 10px;
+}
+
+.button a {
   background-color: rgb(78, 161, 209);
   color: rgb(31, 27, 35);
   font-family: "Overpass", sans-serif;
@@ -33,7 +39,36 @@ p {
 }
 
 
-
+/* temporary even spacing */
 h1, h2, h3, p {
-  margin: 20px 0;
+  /*margin: 20px 0;*/
+}
+
+
+main > section {
+  display: flex;
+  /*width: 50%;                     undo if 3 sections not good*/
+  margin-top: 50px;
+  height: 318px;
+}
+
+section section {
+  padding: 10px;
+  border: 2px solid white;
+}
+
+section section h3, section section p {
+  margin: 15px 0;
+}
+
+
+section section:nth-of-type(1){
+  width: 20%;
+  /*width: 40%;*/
+}
+
+section section:nth-of-type(2){
+  width: 30%;
+  /*width: 60%;*/
+  margin-right: 50px;
 }
