--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -26,7 +26,7 @@
       video game industry as a programmer.</p>
     </section>
 
-    <img src="/images/portrait.jpg" alt="Jason Truong portrait"/>
+    <img src="/images/portrait.png" alt="Jason Truong portrait"/>
   </section>
 
 
