--- a/src/app/main-page/main-page.css
+++ b/src/app/main-page/main-page.css
@@ -1,15 +1,16 @@
 h1 {
-  font-family: "Overpass", sans-serif;
-  font-size: 4.2em;
+  font-family: "Work Sans", sans-serif;
+  font-size: 5.6em;
   font-weight: bold;
-  width: 50%;
+  padding: 40px 0;
+  width: 60%;
 }
 
 /* Button Style */
 .button {
   margin-top: 32px;
   position: relative;
-  left: 10px;
+  left: 20px;
 }
 
 .button a {
@@ -29,13 +30,15 @@ h1 {
 
 
 h3 {
-  font-family: "Rubik", sans-serif;
-  font-size: 2em;
+  font-family: "Work Sans", sans-serif;
+  font-weight: bold;
+  font-size: 2.6em;
 }
 
 
 p {
-  font-size: 1.1em;
+  font-size: 1.3em;
+  line-height: 1.3em;
 }
 
 
@@ -47,28 +50,34 @@ h1, h2, h3, p {
 
 main > section {
   display: flex;
-  /*width: 50%;                     undo if 3 sections not good*/
   margin-top: 50px;
   height: 318px;
 }
 
 section section {
   padding: 10px;
-  border: 2px solid white;
+  /*border: 2px solid white;*/
 }
 
 section section h3, section section p {
-  margin: 15px 0;
+  margin-top: 32px;
 }
 
 
 section section:nth-of-type(1){
-  width: 20%;
+  width: 25%;
   /*width: 40%;*/
 }
 
 section section:nth-of-type(2){
-  width: 30%;
+  width: 32%;
   /*width: 60%;*/
-  margin-right: 50px;
+
+}
+
+section img {
+  margin-left: 70px;
+
+  position: relative;
+  left: 50px;
 }
