--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,8 +20,8 @@
 
   <nav>
     <ul>
-      <li><a>LinkedIn</a></li>
-      <li><a>GitHub</a></li>
+      <a><img ngSrc="/images/icon_linkedin.png" alt="LinkedIn icon" height="150" width="150"/></a>
+      <a><img ngSrc="/images/icon_github.png" alt="GitHub icon" height="150" width="150"/></a>
     </ul>
   </nav>
 </footer>
