--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -26,7 +26,9 @@
       video game industry as a programmer.</p>
     </section>
 
-    <img src="/images/portrait.png" alt="Jason Truong portrait"/>
+    <section>
+      <img src="/images/portrait.png" alt="Jason Truong portrait"/>
+    </section>
   </section>
 
 
