--- a/src/app/main-page/main-page.css
+++ b/src/app/main-page/main-page.css
@@ -1,9 +1,9 @@
 h1 {
   font-family: "Work Sans", sans-serif;
-  font-size: 5.6em;
-  font-weight: bold;
+  font-size: 5em;
+  font-weight: 500;
   padding: 40px 0;
-  width: 60%;
+  width: 70%;
 }
 
 /* Button Style */
@@ -75,9 +75,19 @@ section section:nth-of-type(2){
 
 }
 
+section section:nth-of-type(3){
+  width: 43%;
+  /*width: 60%;*/
+
+}
+
 section img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+
   margin-left: 70px;
 
-  position: relative;
-  left: 50px;
+  /*position: relative;*/
+  /*left: 50px;*/
 }
