--- a/src/app/app.html
+++ b/src/app/app.html
@@ -3,10 +3,10 @@
 
   <nav>
     <ul>
-      <a routerLink="/home" routerLinkActive="active">Home</a>
-      <a routerLink="/projects" routerLinkActive="active">Projects</a>
-      <a routerLink="/about" routerLinkActive="active">About</a>
-      <a routerLink="/contact" routerLinkActive="active">Contact</a>
+      <a routerLink="/home" routerLinkActive="active" appHoverHighlight>Home</a>
+      <a routerLink="/projects" routerLinkActive="active" appHoverHighlight>Projects</a>
+      <a routerLink="/resume" routerLinkActive="active" appHoverHighlight>Resume</a>
+      <a routerLink="/contact" routerLinkActive="active" appHoverHighlight>Contact</a>
     </ul>
   </nav>
 </header>
@@ -24,4 +24,6 @@
       <a><img ngSrc="/images/icon_github.png" alt="GitHub icon" height="150" width="150"/></a>
     </ul>
   </nav>
+
+  <div></div>
 </footer>
