--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -1,7 +1,7 @@
 <main>
-  <div>
+<!--  <div>-->
     <h1>Welcome to my Portfolio</h1>
-  </div>
+<!--  </div>-->
 
   <!-- projects button -->
   <div class="button">
@@ -28,6 +28,47 @@
 
     <section>
       <img src="/images/portrait.png" alt="Jason Truong portrait"/>
+    </section>
+  </section>
+
+  <section>
+    <section>
+      <h2>Skills</h2>
+      <p>I am proficient in these languages with Java being my best language</p>
+
+      <div class="languages">
+        <span>Java</span>
+        <span>HTML/CSS</span>
+        <span>TypeScript</span>
+        <span>JavaScript</span>
+        <span>Python</span>
+        <span>SQL</span>
+        <span>PHP</span>
+      </div>
+    </section>
+
+    <section>
+      <h2>Awards</h2>
+      <p>These are accomplishments I have earned over the years</p>
+
+      <table>
+        <tr>
+          <td>Winter 2025</td>
+          <td>
+            Academic Distinction for Computer Programming<br>
+            St. Clair College
+          </td>
+        </tr>
+
+        <tr>
+          <td>October 2022</td>
+          <td>
+            Principal’s Academic Excellence Certificate<br>
+            Honour Society Certificate<br>
+            Walkerville Collegiate Institute
+          </td>
+        </tr>
+      </table>
     </section>
   </section>
 
