--- a/src/app/main-page/main-page.css
+++ b/src/app/main-page/main-page.css
@@ -1,10 +1,12 @@
-h1 {
-  font-family: "Work Sans", sans-serif;
-  font-size: 5em;
-  font-weight: 500;
-  padding: 40px 0;
-  width: 70%;
-}
+/*h1 {*/
+/*  font-family: "Work Sans", sans-serif;*/
+/*  font-size: 5em;*/
+/*  font-weight: 500;*/
+/*  padding: 40px 0;*/
+/*  width: 70%;*/
+/*}*/
+
+
 
 /* Button Style */
 .button {
@@ -23,22 +25,23 @@ h1 {
   border-radius: 10px;
   padding: 10px 42px;
   width: 40px;
-  text-transform: uppercase;
   letter-spacing: 1px;
 }
 
-
-
-h3 {
-  font-family: "Work Sans", sans-serif;
-  font-weight: bold;
-  font-size: 2.6em;
+.button a:hover{
+  background-color: rgb(124, 204, 255);
+  transition: 0.3s;
 }
 
+h2 {
+  font-weight: bold;
+  font-size: 3em;
+  margin-top: 40px;
+}
 
-p {
-  font-size: 1.3em;
-  line-height: 1.3em;
+h3 {
+  font-weight: bold;
+  font-size: 2.6em;
 }
 
 
@@ -48,11 +51,16 @@ h1, h2, h3, p {
 }
 
 
-main > section {
+main > section:first-of-type {
   display: flex;
   margin-top: 50px;
   height: 318px;
 }
+
+/*main > section:last-of-type section {*/
+/*  display: table-cell;*/
+/*  background-color: white;*/
+/*}*/
 
 section section {
   padding: 10px;
@@ -60,19 +68,16 @@ section section {
 }
 
 section section h3, section section p {
-  margin-top: 32px;
+  margin-top: 20px;
 }
 
 
-section section:nth-of-type(1){
+section:first-of-type section:nth-of-type(1){
   width: 25%;
-  /*width: 40%;*/
 }
 
-section section:nth-of-type(2){
+section:first-of-type section:nth-of-type(2){
   width: 32%;
-  /*width: 60%;*/
-
 }
 
 section section:nth-of-type(3){
@@ -90,4 +95,55 @@ section img {
 
   /*position: relative;*/
   /*left: 50px;*/
+}
+
+/* Table styles */
+table {
+  font-family: "Inter", sans-serif;
+  font-size: 1.3em;
+  color: white;
+  width: 800px;
+  margin-top: 20px;
+}
+
+table tr td:first-child {
+  /*background-color: pink;*/
+  width: 30%;
+  font-weight: bold;
+}
+
+table td {
+  padding: 10px;
+  line-height: 1.5;
+}
+
+table td p {
+  color: black;
+  font-size: 1em;
+}
+
+
+/* Styles for the coding languages */
+div span {
+  display: inline-block;
+  font-family: "Inter", sans-serif;
+  font-size: 1.3em;
+  /*color: rgb(186, 212, 241);*/
+  color: black;
+  background-color: rgb(118, 178, 216);
+  margin: 16px 5px 5px;
+  padding: 14px 20px;
+  border-radius: 26px;
+}
+
+div span:hover {
+  background-color: rgb(105, 160, 193);
+  transition: 0.3s;
+}
+
+.languages {
+  display: flex;
+  flex-wrap: wrap;
+  /*background-color: pink;*/
+  width: 60%;
 }
