Created contact page, resume link, and page not found page - Added links to resume, GitHub and LinkedIn - Used mat-icon for icons in contact page

--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -1,14 +1,10 @@
 <main>
-<!--  <div>-->
-    <h1>Welcome to my Portfolio</h1>
-<!--  </div>-->
+  <h1>Welcome to my Portfolio</h1>
 
   <!-- projects button -->
   <div class="button">
     <a class="button" routerLink="/projects" routerLinkActive="active">Projects</a>
   </div>
-
-
 
   <section>
     <section>
@@ -27,14 +23,14 @@
     </section>
 
     <section>
-      <img src="/images/portrait.png" alt="Jason Truong portrait"/>
+      <img ngSrc="/images/portrait.png" alt="Jason Truong portrait" height="360" width="478"/>
     </section>
   </section>
 
   <section>
     <section>
       <h2>Skills</h2>
-      <p>I am proficient in these languages with Java being my best language</p>
+      <p>I am proficient in these languages, with Java being my strongest language.</p>
 
       <div class="languages">
         <span>Java</span>
@@ -49,7 +45,7 @@
 
     <section>
       <h2>Awards</h2>
-      <p>These are accomplishments I have earned over the years</p>
+      <p>These are accomplishments I have earned over the years.</p>
 
       <table>
         <tr>
@@ -71,7 +67,5 @@
       </table>
     </section>
   </section>
-
-
 </main>
 
