--- a/src/app/project-list/project-list.html
+++ b/src/app/project-list/project-list.html
@@ -13,14 +13,11 @@
         view, edit, and update records in their video game library across
         different platforms.
       </p>
-
-      <p>
-
-      </p>
     </section>
 
     <section>
-      <img src="/images/project_gims.png" alt="Preview of Game Inventory Management System software" />
+      <img ngSrc="/images/project_gims.png" alt="Preview of Game Inventory Management System software" height="420"
+           width="560"/>
     </section>
   </section>
 
@@ -53,7 +50,8 @@
     </section>
 
     <section>
-      <img src="/images/project_space.png" alt="Preview of our space-shooter game, Space Game" />
+      <img ngSrc="/images/project_space.png" alt="Preview of our space-shooter game, Space Game" height="420"
+           width="560"/>
     </section>
   </section>
 
@@ -74,7 +72,8 @@
     </section>
 
     <section>
-      <img src="/images/project_breakout.png" alt="Preview of my personal mini-game, Breakout" />
+      <img ngSrc="/images/project_breakout.png" alt="Preview of my personal mini-game, Breakout" height="345"
+           width="560"/>
     </section>
   </section>
 </main>
