--- a/src/app/app.html
+++ b/src/app/app.html
@@ -5,7 +5,7 @@
     <ul>
       <a routerLink="/home" routerLinkActive="active" appHoverHighlight>Home</a>
       <a routerLink="/projects" routerLinkActive="active" appHoverHighlight>Projects</a>
-      <a routerLink="/resume" routerLinkActive="active" appHoverHighlight>Resume</a>
+      <a href="/resume.pdf" target="_blank" appHoverHighlight>Resume</a>
       <a routerLink="/contact" routerLinkActive="active" appHoverHighlight>Contact</a>
     </ul>
   </nav>
@@ -20,8 +20,8 @@
 
   <nav>
     <ul>
-      <a><img ngSrc="/images/icon_linkedin.png" alt="LinkedIn icon" height="150" width="150"/></a>
-      <a><img ngSrc="/images/icon_github.png" alt="GitHub icon" height="150" width="150"/></a>
+      <a href="https://www.linkedin.com/in/jason-truong-v/"><img ngSrc="/images/icon_linkedin.png" alt="LinkedIn icon" height="150" width="150"/></a>
+      <a href="https://github.com/jasonvtruong"><img ngSrc="/images/icon_github.png" alt="GitHub icon" height="150" width="150"/></a>
     </ul>
   </nav>
 
