--- a/src/app/page-not-found/page-not-found.html
+++ b/src/app/page-not-found/page-not-found.html
@@ -1,1 +1,5 @@
-<p>page-not-found works!</p>
+<section>
+  <h2>Page not found!</h2>
+
+  <p><a routerLink="/home">Return to Home</a></p>
+</section>
