--- a/src/styles.css
+++ b/src/styles.css
@@ -65,3 +65,6 @@ p {
   font-size: 1.3em;
   line-height: 1.5;
 }
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
