Moved images into public folder and updated links in tags * For images to load on GitHub page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -20,8 +20,8 @@
 
   <nav>
     <ul>
-      <a href="https://www.linkedin.com/in/jason-truong-v/"><img ngSrc="/images/icon_linkedin.png" alt="LinkedIn icon" height="150" width="150"/></a>
-      <a href="https://github.com/jasonvtruong"><img ngSrc="/images/icon_github.png" alt="GitHub icon" height="150" width="150"/></a>
+      <a href="https://www.linkedin.com/in/jason-truong-v/"><img ngSrc="icon_linkedin.png" alt="LinkedIn icon" height="150" width="150"/></a>
+      <a href="https://github.com/jasonvtruong"><img ngSrc="icon_github.png" alt="GitHub icon" height="150" width="150"/></a>
     </ul>
   </nav>
 
