--- a/src/app/main-page/main-page.html
+++ b/src/app/main-page/main-page.html
@@ -23,7 +23,7 @@
     </section>
 
     <section>
-      <img ngSrc="/images/portrait.png" alt="Jason Truong portrait" height="360" width="478"/>
+      <img ngSrc="portrait.png" alt="Jason Truong portrait" height="360" width="478"/>
     </section>
   </section>
 
