--- a/src/app/project-list/project-list.html
+++ b/src/app/project-list/project-list.html
@@ -16,7 +16,7 @@
     </section>
 
     <section>
-      <img ngSrc="/images/project_gims.png" alt="Preview of Game Inventory Management System software" height="420"
+      <img ngSrc="project_gims.png" alt="Preview of Game Inventory Management System software" height="420"
            width="560"/>
     </section>
   </section>
@@ -50,7 +50,7 @@
     </section>
 
     <section>
-      <img ngSrc="/images/project_space.png" alt="Preview of our space-shooter game, Space Game" height="420"
+      <img ngSrc="project_space.png" alt="Preview of our space-shooter game, Space Game" height="420"
            width="560"/>
     </section>
   </section>
@@ -72,7 +72,7 @@
     </section>
 
     <section>
-      <img ngSrc="/images/project_breakout.png" alt="Preview of my personal mini-game, Breakout" height="345"
+      <img ngSrc="project_breakout.png" alt="Preview of my personal mini-game, Breakout" height="345"
            width="560"/>
     </section>
   </section>
